# redline

./: .gitignore  CLA.md  CONTRIBUTING.md  NOTICE  README.md  SPEC.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  roadmap.md  vitest.config.ts
.claude/skills/: redline
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/cla-signatures/: README.md
.github/workflows/: cla.yml
docs/: cla-dry-run.txt  document-ide-northstar.md  perf-budget.md  perf-hardening-handoff.md  protocol-verification.md  sub-block-addressing.md
scripts/: probe-command-hook.sh  redline.sh  sample-plan-payload.json  update.sh  verify-hook.py
skills/browse/: SKILL.md
skills/mission/: SKILL.md
skills/redline/: SKILL.md
skills/sidecar/: SKILL.md
src/: App.tsx  diff.test.ts  diff.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: kokoro_sidecar.py
src-tauri/src/: agent.rs  browse.rs  claude_proc.rs  db.rs  dictation.rs  feedback.rs  fork.rs  fsbrowse.rs  fswatch.rs  highlight.rs  hook.rs  lib.rs  main.rs  mission.rs  parser.rs  perf_guard.rs  pty.rs  resolutions.rs  skill.rs  state.rs  tts.rs  update.rs  voice.rs
src-tauri/tests/golden/: feedback_ask.golden.txt  feedback_revise.golden.txt
src/audio/: beep.ts  cloudTts.ts  speech.test.ts  speech.ts  vad.test.ts  vad.ts
src/components/: AlertSettings.tsx  AnchorPill.tsx  ApproveToast.tsx  AskModeViolationBanner.tsx  BrowserChat.tsx  BrowserPane.tsx  CloseConfirmModal.tsx  CodeView.tsx  CommentCard.tsx  CommentComposer.tsx  CommentThread.tsx  DecisionWindowBanner.tsx  DiscussionViewContext.ts  Document.tsx  DownloadMenu.tsx  DrafterFindBar.tsx  DrafterToolbar.tsx  EditableBlock.test.tsx  EditableBlock.tsx  FeedbackModal.tsx  FileTree.tsx  FileViewer.tsx  FlashOverlay.tsx  FontPicker.tsx  Footer.tsx  Header.tsx  HookSetupModal.tsx  MarkdownView.test.ts  MarkdownView.tsx  MissionChat.tsx  MissionStartDialog.tsx  ModeToggle.tsx  OnboardingTour.tsx  PaneDivider.tsx  PlanEditor.tsx  PlanSearchBox.tsx  ProjectPicker.tsx  PromptDrafter.tsx  ReadmeModal.tsx  ResolutionWarningBanner.tsx  (+14 more)
src/editor/: agentSuggestions.test.ts  applyCommentsToDoc.test.ts  applyCommentsToDoc.ts  changeLedger.test.ts  changeLedger.ts  contractGolden.test.ts  docModel.test.ts  docModel.ts  planEditorSync.test.ts  resolveHighlightRange.ts  sentenceSegment.test.ts  sentenceSegment.ts  subBlockResolve.test.ts  subBlockResolve.ts  suggestions.ts  unitResolve.test.ts  unitResolve.ts  useTrackChangesSync.ts  wordDiff.test.ts  wordDiff.ts
src/editor/adapters/: adapters.test.ts  index.ts
src/editor/adapters/docx/: exporter.ts  nodeToDocx.ts
src/editor/extensions/: AnchorIdAttribute.ts  BlockIdAttribute.ts  CodeBlockView.tsx  CommentHighlights.test.ts  CommentHighlights.ts  CommentMarkers.ts  FontSize.ts  Indent.ts  LineHeight.ts  MermaidView.tsx  RedlineDecorations.ts  SearchHighlight.test.ts  SearchHighlight.ts  TableAlign.ts  TableControls.ts  TrackChanges.ts  TrackChangesInput.ts  TrailingNode.ts  drafterExtensions.ts  drafterFormatting.test.ts  planExtensions.ts
src/editor/html/: domPoint.test.ts  domPoint.ts  domRange.test.ts  domRange.ts
src/editor/markdown/: index.ts  parser.ts  roundtrip.test.ts  schema.ts  serializer.ts  sidecar.test.ts  sidecar.ts
src/editor/yjs/: planYDoc.test.ts  planYDoc.ts
src/hooks/: useFolderWorkspaces.ts  useFsWatch.ts  useMission.ts  useResizablePane.ts  useTextSelection.ts
src/lib/: claudeWorking.test.ts  claudeWorking.ts  domSnapshot.test.ts  domSnapshot.ts  externalLinks.ts  markdownToSpeakable.test.ts  markdownToSpeakable.ts  obsidian.ts  obsidianClip.test.ts  obsidianClip.ts  omnibox.test.ts  omnibox.ts  planLaunchCommand.test.ts  planLaunchCommand.ts  resumeCommand.test.ts  resumeCommand.ts  revisionVersions.ts  scrapeKernel.test.ts  scrapeKernel.ts  scrapeOutput.test.ts  scrapeOutput.ts  scrapePresets.ts  scrapeSchema.test.ts  scrapeSchema.ts  virtual.test.ts  virtual.ts
src/theme/: applyTheme.ts  derive.ts  fonts.test.ts  fonts.ts  themes.ts  usePersistedState.ts
