[package]
name = "redline"
version = "0.1.0"
description = "Companion app for Claude Code that turns plan-mode review into a track-changes workflow"
authors = ["Yusuf Al-Bazian"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sersiousSenpai/redline"

[lib]
name = "redline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
similar = "2"
portable-pty = "0.8"
base64 = "0.22"
notify-debouncer-mini = "0.4"
# Pure-Rust regex backend (fancy-regex) so the build needs no C/oniguruma
# toolchain. Tokenizes off the UI thread for the read-only file viewer.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

