[package]
name = "redline"
version = "0.1.0"
description = "Companion app for Claude Code that turns plan-mode review into a track-changes workflow"
authors = ["Yusuf Al-Bazian"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sersiousSenpai/redline"

[lib]
name = "redline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables the multi-webview API (embedding a native child webview
# inside the main window — the embedded browser pane). It's the only supported
# way to do in-window child webviews in Tauri 2 today; the JS `new Webview(...)`
# path requires it on the Rust side too.
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
similar = "2"
portable-pty = "0.8"
base64 = "0.22"
notify-debouncer-mini = "0.4"
# Oniguruma regex backend (the same engine VS Code uses) for the read-only file
# viewer's syntax highlighting. We measured the pure-Rust `fancy-regex` backend
# compiling the TypeScript/TSX grammars ~50-60x slower (2.4s cold vs ~40ms in a
# debug build), which showed as a multi-second "Loading…" on the first open;
# oniguruma makes the first open instant. It builds oniguruma from C source, but
# this is already a native (Tauri) build with a C toolchain, so it adds no new
# class of build dependency. Tokenizes off the UI thread.
syntect = { version = "5", default-features = false, features = ["default-onig"] }
# Extended grammar set (bat's curated, permissive-only syntaxes) — adds the
# TypeScript/TSX/JSX grammars that syntect's bundled defaults lack, so .ts/.tsx
# files highlight instead of falling back to plain text. `syntect-default-fancy`
# pins the same fancy-regex syntect build as above. Bundled-asset attributions
# live in THIRD_PARTY_NOTICES.md (from two_face::acknowledgement::listing()).
# `syntect-default-onig` pins the same oniguruma syntect build as above.
two-face = { version = "0.5", default-features = false, features = ["syntect-default-onig"] }
# HTTP client for the voice agent's premium (cloud) TTS — the synth call is made
# from Rust so the user's API key never enters the webview and there's no browser
# CORS. Default TLS (Security.framework on macOS), JSON bodies.
reqwest = { version = "0.13.4", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Enable WKWebView's back/forward swipe gestures on the embedded browser.
# Tauri 2.11 doesn't expose `setAllowsBackForwardNavigationGestures`, so we
# reach the WKWebView via `with_webview()` and send the selector with objc2
# (already in the dependency tree via wry/tauri).
objc2 = "0.6"
# Build the WKWebView `evaluateJavaScript:completionHandler:` block used by
# `browser_scrape` to read the live page DOM back into Rust (already in the tree
# via wry/objc2).
block2 = "0.6"
# Native on-device speech-to-text (`dictation.rs`, push-to-talk). The typed
# objc2 framework crates give compile-checked Speech / AVFAudio methods and
# `Retained<T>` lifetime safety (vs. hand-rolled `msg_send!`), which matters
# because the unsafe audio/TCC path can't be exercised by `cargo test` — only by
# a signed run. They also emit the `-framework Speech` / `AVFAudio` link
# directives, so no `build.rs` linker lines are needed. Same objc2 0.6 family
# already in the tree via wry/tauri.
objc2-speech = "0.3.2"     # SFSpeechRecognizer + recognition request/result/task
objc2-avf-audio = "0.3.2"  # AVAudioEngine mic tap + PCM buffers
objc2-foundation = "0.3.2" # NSString/NSLocale/NSError bridging

